@@ -1,6 +1,10 @@
 1.2.7
 _____
 
+
+(opennlp.maxent.DataIndexer)  Do not index events with 0 active features.
+(Eric)
+
 Upgraded trove dependency to 0.1.1 (includes TIntArrayList, with reset()) 
 (Eric)
 
